# tracking_detector

./: CMakeLists.txt
scripts/: Model_bias.csv  Model_maxs.csv  Model_means.csv  Model_mins.csv  Model_stds.csv  Model_weights.csv  test_detector_mars.sh
src/: test_detector.cpp  test_detector.cpp.old.cpp  test_detector.hpp  test_detector_cpu.cpp  test_detector_cpu.hpp  test_detector_inria.cpp  test_detector_mars.cpp  test_hmc.cpp  test_lr.cpp  test_lr_cpu.cpp
src/DPP/: dpp.cpp  dpp.hpp
src/detector/: CPU_HMC_hog_detector.cpp  CPU_LR_hog_detector.cpp  CPU_LR_hog_detector.hpp  GPU_HMC_hog_detector.cpp  GPU_LR_hog_detector.cpp  GPU_LR_hog_detector.hpp  Mask_CPU_HMC_hog_detector.cpp  Mask_GPU_HMC_hog_detector.cpp  hog_detector.cpp  hog_detector.hpp
src/likelihood/: CPU_hmc.cpp  CPU_hmc.hpp  CPU_logistic_regression.cpp  GPU_hmc.cpp  GPU_hmc.hpp  Mask_CPU_hmc.cpp  Mask_CPU_hmc.hpp  Mask_GPU_hmc.cpp  Mask_GPU_hmc.hpp  Mask_GPU_logistic_regression.cpp  hmc.cpp  hmc.hpp  logistic_regression.cpp  logistic_regression.hpp
src/utils/: c_utils.cpp  c_utils.hpp  image_generator.cpp  image_generator.hpp  utils.hpp
